--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0.56"
 rand = "0.8.5"
+rand_distr = "0.4.3"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
