--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
-  "name": "smashquiz",
-  "version": "0.0.0",
-  "description": "",
-  "type": "module",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
-    "tauri": "tauri"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@emotion/css": "^11.11.2",
-    "@fontsource-variable/m-plus-1-code": "^5.0.17",
-    "@fontsource/rocknroll-one": "^5.0.11",
-    "@fontsource/russo-one": "^5.0.18",
-    "@solidjs/router": "^0.11.5",
-    "@tauri-apps/api": "^1.5.2",
-    "chroma-js": "^2.4.2",
-    "solid-icons": "^1.1.0",
-    "solid-js": "^1.7.8"
-  },
-  "devDependencies": {
-    "@tauri-apps/cli": "^1.5.8",
-    "@types/chroma-js": "^2.4.4",
-    "sass": "^1.70.0",
-    "typescript": "^5.0.2",
-    "vite": "^5.0.0",
-    "vite-plugin-solid": "^2.8.0"
-  }
+	"name": "smashquiz",
+	"private": true,
+	"version": "0.1.1",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"tauri": "tauri"
+	},
+	"dependencies": {
+		"@emotion/css": "^11.11.2",
+		"@fontsource-variable/m-plus-1-code": "^5.0.17",
+		"@fontsource/rocknroll-one": "^5.0.11",
+		"@fontsource/russo-one": "^5.0.18",
+		"@solidjs/router": "^0.11.5",
+		"@tauri-apps/api": "^2",
+		"@tauri-apps/plugin-shell": "^2",
+		"chroma-js": "^2.4.2",
+		"solid-icons": "^1.1.0",
+		"solid-js": "^1.7.8"
+	},
+	"devDependencies": {
+		"@tauri-apps/cli": "^2",
+		"@types/chroma-js": "^2.4.4",
+		"sass": "^1.70.0",
+		"typescript": "^5.2.2",
+		"vite": "^5.3.1",
+		"vite-plugin-solid": "^2.8.0"
+	}
 }
